# PyAAindex

./: README.md  example.ipynb  pyproject.toml
src/pyaaindex/: __init__.py  _download.py  _models.py  _parse.py  _store.py  api.py  constants.py
tests/: test_api.py  test_parser.py
tests/fixtures/: aaindex1_sample.txt  aaindex2_sample.txt  aaindex3_sample.txt
